@@ -235,7 +235,6 @@ function displayDirectory( $dir, $dir_url, $sort, $title, $music, $playlists, $h
 		}
 		$dirs[$i] = stripslashes( $dirs[$i] );
 		$build_dir.="$dirs[$i]";
-		$build_dir = rawurlencode( $build_dir );
 		echo " / ";
 		echo "<a title=\"Jump to " . $dirs[$i]  . "\" href=\"index.php?body=main&amp;server=$server&amp;sort=$sort&amp;ordered=$ordered&amp;dir=$build_dir\">$dirs[$i]</a>";
 	}
